[project]
name = "amneshia"
version = "1.0.0"
description = "A unified Single Source of Truth memory system with RAG for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "mcp",
    "chromadb",
    "pydantic"
]

[project.scripts]
amneshia = "amneshia.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
